force-app/main/default/objects/sfmc_email_complaint_534007695__dll/fields/EmailFromAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailFromAddress__c</fullName>
    <label>Email From Address</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailFromAddress</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>