force-app/main/default/objects/sfmc_email_complaint_534007695__dll/fields/EmailID__c.field-meta.xml
<CustomField>
    <fullName>EmailID__c</fullName>
    <label>Email ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>