force-app/main/default/objects/sfmc_email_complaint_534007695__dll/fields/EngagementChannel__c.field-meta.xml
<CustomField>
    <fullName>EngagementChannel__c</fullName>
    <label>Engagement Channel</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EngagementChannel</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>