force-app/main/default/objects/sfmc_email_complaint_534007695__dll/fields/JourneyID__c.field-meta.xml
<CustomField>
    <fullName>JourneyID__c</fullName>
    <label>Journey ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>JourneyID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>